--- a/app/src/main/res/layout/activity_new_program.xml
+++ b/app/src/main/res/layout/activity_new_program.xml
@@ -62,13 +62,22 @@
 
     <com.adarsh.paintapp.DrawingView
         android:id="@id/drawing"
+        android:layout_width="0dp"
+        android:layout_height="256dp"
+        android:background="#FFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/draw" />
+
+    <com.adarsh.paintapp.DrawingViewOther
+        android:id="@+id/drawingView2"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:background="#FFF"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/draw" />
+        app:layout_constraintTop_toBottomOf="@+id/drawing" />
 
     <LinearLayout
         android:id="@+id/paintColors"
